# pharos

./: .env.example  .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: graph_schema.yaml  ollama_models.yaml
pharos/: __init__.py  config.py
pharos/agents/: __init__.py  alchemist.py  architect.py  base.py  cartographer.py  general.py  oracle.py  router.py  scribe.py  sentinel.py
pharos/forecasting/: __init__.py  hypothesis_gen.py  trend_detector.py
pharos/graph/: __init__.py  entity_extractor.py  neo4j_manager.py  schema.py  seed_importer.py
pharos/memory/: __init__.py  kg_memory.py  session_state.py
pharos/orchestration/: __init__.py  graph_workflow.py  prompts.py  task_models.py
pharos/tools/: __init__.py  ollama_client.py  pdf_tools.py  protein_tools.py  pubmed_tools.py  rdkit_tools.py
pharos/ui/: __init__.py  chainlit_app.py
scripts/: demo.py  seed_graph.py  setup_neo4j.sh  setup_ollama.sh
tests/: __init__.py  conftest.py  test_architect.py  test_cartographer.py  test_config.py  test_entity_extractor.py  test_graph_workflow.py  test_integration.py  test_ollama_client.py  test_oracle.py  test_protein_tools.py  test_pubmed_tools.py  test_router.py  test_scribe.py  test_sentinel.py  test_task_models.py  test_trend_detector.py
